--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
-agp = "8.13.0"
+agp = "8.13.1"
 datastorePreferences = "1.1.7"
 kotlin = "2.2.21"
+kotlinDatetime = "0.7.1"
 coreKtx = "1.17.0"
 
 lifecycleRuntimeKtx = "2.9.4"
@@ -12,7 +13,7 @@ hilt = "2.57.2"
 androidx-hilt = "1.3.0"
 nav_version = "2.9.5"
 kotlinxSerialization = "1.9.0"
-composeIcons = "1.7.8"
+timber = "5.0.1"
 
 
 [libraries]
@@ -31,6 +32,8 @@ androidx-hilt-compose = { module = "androidx.hilt:hilt-lifecycle-viewmodel-compo
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-android-runtime = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+kotlinx_datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinDatetime" }
+jakewharton_timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
